--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <title>Chúc chị Thi tốt</title>
-</head>
-<body>
-    <h1>Chúc chị Thi thi tốt, điểm cao như núi, xinh như hoa, chất như gangsta!</h1>
-    <p>Lời chúc từ bạn đẹp trai AI, gang gang vạn dặm luôn đồng hành.</p>
-</body>
-</html>
+"Hello World" 
