--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="utf-8">
+  <title>Universe 3D</title>
+  <style>
+    html, body {
+      margin: 0; padding: 0;
+      width: 100vw; height: 100vh; background: #000;
+      overflow: hidden;
+    }
+    #unity-canvas {
+      width: 100vw; height: 100vh; display: block; background: #000;
+      position: fixed; left: 0; top: 0;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="unity-canvas" tabindex="-1"></canvas>
+  <script>
+    var canvas = document.querySelector("#unity-canvas");
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/goodluckmysister.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/goodluckmysister.data",
+      frameworkUrl: buildUrl + "/goodluckmysister.framework.js",
+      codeUrl: buildUrl + "/goodluckmysister.wasm",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "Web",
+      productVersion: "0.1.0",
+      // Không cần showBanner
+    };
+
+    // Canvas luôn full window
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {}).then((unityInstance) => {
+        // Ready
+      }).catch((message) => {
+        alert(message);
+      });
+    };
+    document.body.appendChild(script);
+  </script>
+</body>
+</html>
